--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800');
+
+@font-face {
+    font-family: 'Beyond';
+    src: url('../fonts/beyond_the_mountains.otf') format('truetype'),
+        url('../fonts/beyond_the_mountains.ttf') format('opentype');
+}
 
 body {
     font-family: 'Poppins', sans-serif;
@@ -8,4 +15,5 @@ body {
 
 .shadow-text {
     text-shadow: black 12px -2px 20px;
+    font-family: 'Beyond', sans-serif;
 }
